Start jwt authentication
